# PID_microplastic

./: .gitignore  README.md  app_ui.py  calibration.py  camera.py  config.py  cropping.py  dataset.csv  debug_30fps_sh500_g8.0_20260711_200803.csv  debug_amorfas.csv  debug_frames.py  debug_tracker.py  detector.py  detector_v2.py  detector_v3.py  features.py  get_frames.py  grabar.py  label_particles.py  main.py  main_live.py  processing.py  pump.py  pyproject.toml  rf_classifier.py  rf_model.joblib  test.py  tracker.py  train_rf.py  utils.py  video_source.py  visualization.py  visualizer.py
arduino/: arduino.py  bomba_fuzzy.ino
arduino/bomba_fuzzy/: bomba_fuzzy.ino
random_forest/: dataset.csv  rf_classifier.py  rf_model.joblib  train_rf.py
tools/: benchmark_live.py  cut_video.py  debug_tracker.py  grabar.py  label_particles.py  show_grid.py
