[project]
name = "pdi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.0.0",
    "opencv-python>=5.0.0.93",
    "pillow>=11.0.0",
    "pyserial>=3.5",
    "scikit-learn>=1.5",
    "scipy>=1.13.0",
    "simplejpeg>=1.7.0",
]
